infrastructure/kargo/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: controllers-api-dns
  namespace: kargo
spec:
  endpointSelector:
    matchLabels: {app.kubernetes.io/name: kargo}
  egress:
    - toEntities: [kube-apiserver]
      toPorts:
        - ports: [{port: "443", protocol: TCP}, {port: "6443", protocol: TCP}]
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports: [{port: "53", protocol: UDP}, {port: "53", protocol: TCP}]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: api-identity
  namespace: kargo
spec:
  endpointSelector:
    matchLabels: {app.kubernetes.io/name: kargo, app.kubernetes.io/component: api}
  ingress:
    - fromEntities: [ingress]
      toPorts:
        - ports: [{port: "8080", protocol: TCP}]
  egress:
    - toEntities: [ingress]
      toPorts:
        - ports: [{port: "443", protocol: TCP}]
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: authentik
            app.kubernetes.io/name: authentik
            app.kubernetes.io/component: server
      toPorts:
        - ports: [{port: "9000", protocol: TCP}]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: admission
  namespace: kargo
spec:
  endpointSelector:
    matchLabels: {app.kubernetes.io/name: kargo, app.kubernetes.io/component: kubernetes-webhooks-server}
  ingress:
    - fromEntities: [kube-apiserver]
      toPorts:
        - ports: [{port: "9443", protocol: TCP}]
